--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green_nu">
+    android:background="@color/green_nu"
+    >
 
     <ImageView
         android:layout_width="300dp"
