--- a/app/src/main/res/layout/activity_homepg.xml
+++ b/app/src/main/res/layout/activity_homepg.xml
@@ -154,12 +154,13 @@
 
     <ImageView
         android:id="@+id/bg"
-        android:layout_width="850dp"
-        android:layout_height="850dp"
+        android:layout_width="500dp"
+        android:layout_height="500dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bg"
         app:tint="#4B000000"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-420dp"
-        />
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
