--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
             android:layout_marginBottom="22dp"
             android:backgroundTint="#FFF"
             android:text="Login With Google"
-            android:textColor="@color/black"
+            android:textColor="@color/blue_nu"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:cornerRadius="30dp"
@@ -144,7 +144,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
         app:elevation="20dp"
-        app:backgroundTint="@color/orange"
+        app:backgroundTint="@color/blue_li"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/password" />
