--- a/app/src/main/res/layout/activity_checklist_page.xml
+++ b/app/src/main/res/layout/activity_checklist_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/dark_blue">
+    android:background="@color/lavender">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycerlview"
@@ -23,10 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="40dp"
         android:clickable="true"
         app:tint="@color/white"
-        android:backgroundTint="@color/green"
+        android:backgroundTint="@color/blue_nu"
         app:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,11 +39,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+
         android:text="My Shopping List"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/green"
+        android:textColor="@color/brwn"
         android:fontFamily="@font/quicksand_bold"
         android:textSize="30sp"
         />
@@ -52,10 +53,20 @@
         android:id="@+id/ExpPrices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="24dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/rounded_corner"
+        app:backgroundTint="@color/blue_nu"
+        android:fontFamily="@font/quicksand_semibold"
+        android:textAlignment="center"
+        android:stateListAnimator="@null"
         android:text="Explore Prices"
+        android:clickable="true"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:elevation="10dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
