--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="338dp"
         android:layout_height="455dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginBottom="90dp"
         android:background="@drawable/shape_login_panel"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -137,7 +137,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
         android:textSize="20dp"
-        app:backgroundTint="@color/orange"
+        app:backgroundTint="@color/blue_nu"
         app:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
