--- a/app/src/main/res/layout/activity_checklist_page.xml
+++ b/app/src/main/res/layout/activity_checklist_page.xml
@@ -38,8 +38,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:text="My Shopping List"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,14 +59,14 @@
         android:layout_marginBottom="40dp"
         android:background="@drawable/rounded_corner"
         app:backgroundTint="@color/blue_nu"
-        android:fontFamily="@font/quicksand_semibold"
+        android:fontFamily="@font/quicksand_bold"
         android:textAlignment="center"
-        android:stateListAnimator="@null"
+        android:textSize="18dp"
         android:text="Explore Prices"
         android:clickable="true"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:elevation="10dp"
+        app:elevation="20dp"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
