--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -82,9 +82,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="25dp"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginEnd="40dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="13dp"
+                        android:layout_marginBottom="13dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_toEndOf="@+id/privateAccountIcon"
                         android:fontFamily="@font/quicksand_bold"
                         android:text="Enable Notifications"
@@ -138,7 +139,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
-                        android:gravity="center_vertical"
+                        android:gravity="center"
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="26dp"
                         android:layout_marginBottom="13dp"
@@ -150,7 +151,6 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="18dp" />
-                        app:backgroundTint="@color/blue_nu" />
 
                 </RelativeLayout>
                 <RelativeLayout
@@ -185,7 +185,6 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
-
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="26dp"
                         android:layout_marginBottom="13dp"
@@ -197,7 +196,10 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="18dp"
-                        app:backgroundTint="@color/blue_nu" />
+                        app:backgroundTint="@color/blue_nu"
+                        android:letterSpacing="0"
+                        />
+
 
                 </RelativeLayout>
 
@@ -245,7 +247,9 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="18dp"
-                        app:backgroundTint="@color/blue_nu" />
+                        app:backgroundTint="@color/blue_nu"
+                        android:letterSpacing="0"
+                        />
 
                 </RelativeLayout>
 
@@ -291,7 +295,8 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="18dp"
-                        app:backgroundTint="@color/blue_nu" />
+                        app:backgroundTint="@color/blue_nu"
+                        android:letterSpacing="0"/>
 
                 </RelativeLayout>
 
@@ -337,7 +342,8 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="16dp"
-                        app:backgroundTint="@color/blue_nu" />
+                        app:backgroundTint="@color/blue_nu"
+                        android:letterSpacing="0"/>
 
                 </RelativeLayout>
 
@@ -372,8 +378,8 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginStart="27dp"
-                        android:layout_marginTop="11dp"
+
+                        android:layout_marginTop="13dp"
                         android:layout_marginEnd="26dp"
                         android:layout_marginBottom="13dp"
                         android:layout_toEndOf="@+id/privacyicon"
@@ -382,8 +388,9 @@
                         android:text="Terms &amp; Conditions"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
-                        android:textSize="18dp"
-                        app:backgroundTint="@color/blue_nu" />
+                        android:textSize="16dp"
+                        app:backgroundTint="@color/blue_nu"
+                        android:letterSpacing="0"/>
 
                 </RelativeLayout>
 
@@ -429,7 +436,9 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="18dp"
-                        app:backgroundTint="@color/blue_nu" />
+                        app:backgroundTint="@color/blue_nu"
+                        android:letterSpacing="0"
+                        />
 
                 </RelativeLayout>
             </LinearLayout>
